--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,15 @@
     <servlet-name>Server</servlet-name>
     <url-pattern>/index</url-pattern>
   </servlet-mapping>
+   <servlet>
+    <servlet-name>ActionServer</servlet-name>
+    <servlet-class>com.ActionServer</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ActionServer</servlet-name>
+    <url-pattern>/ActionServer</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index</welcome-file>
   </welcome-file-list>
